--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
+
+
+spring.web.resources.add-mappings=true
+
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.swagger-ui.tryItOutEnabled=true
+
+
