--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/almacen?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=ABCDEFGHIJKLMNOPQRSTUVWXYZ123456
+jwt.expiration=86400000
 
-
-spring.web.resources.add-mappings=true
-
-springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.tryItOutEnabled=true
-
-
+spring.web.resources.add-mappings=true
